--- a/starter_project/src/client/views/index.html
+++ b/starter_project/src/client/views/index.html
@@ -37,13 +37,13 @@
         <script>
             // Check that service workers are supported
             if ('serviceWorker' in navigator) {
-                if (env.NODE_ENV === 'production') {
+                //if (process.env.NODE_ENV === 'production') {
                 // Use the window load event to keep the page load performant
                     window.addEventListener('load', () => {
                         navigator.serviceWorker.register('/service-worker.js');
                     });
                 }
-            }
+            //}
         </script>
 
     </body>
